refactor(build): change shell to antrun